[gd_scene load_steps=7 format=1]

[ext_resource path="res://ui/login/login_ui.gd" type="Script" id=1]
[ext_resource path="res://fonts/KenVector Future.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]

font/size = 16
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]

font/size = 16
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]

font/size = 16
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]

font/size = 16
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 2 )

[node name="main" type="Control"]

process/pause_mode = 2
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
script/script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 54.0
margin/top = 53.0
margin/right = 572.0
margin/bottom = 349.0

[node name="user_label" type="Label" parent="Panel"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 108.0
margin/top = 96.0
margin/right = 191.0
margin/bottom = 114.0
custom_fonts/font = SubResource( 1 )
text = "usuario"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="passw_label" type="Label" parent="Panel"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 60.0
margin/top = 135.0
margin/right = 190.0
margin/bottom = 153.0
custom_fonts/font = SubResource( 2 )
text = "contraseña"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="error_login_label" type="Label" parent="Panel"]

visibility/visible = false
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 188.0
margin/top = 206.0
margin/right = 299.0
margin/bottom = 220.0
text = "¡Login incorrecto!"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="user_txt" type="LineEdit" parent="Panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 203.0
margin/top = 94.0
margin/right = 353.0
margin/bottom = 118.0
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="passw_txt" type="LineEdit" parent="Panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 203.0
margin/top = 132.0
margin/right = 353.0
margin/bottom = 156.0
placeholder/alpha = 0.6
secret = true
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="login_btn" type="Button" parent="Panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 119.0
margin/top = 234.0
margin/right = 272.0
margin/bottom = 258.0
custom_fonts/font = SubResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Iniciar sesión"
flat = false

[node name="register_btn" type="Button" parent="Panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 341.0
margin/top = 236.0
margin/right = 488.0
margin/bottom = 260.0
custom_fonts/font = SubResource( 4 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Registrarse"
flat = false


